data/derived/comb/progs/unify/prog8176.ml.out
Characters 85-89:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
